corrected alignment of content-pricing section

--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ p {
 
 .content-pricing {
   display: flex;
+  justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
   width: 100vw;
@@ -346,6 +347,11 @@ td:nth-child(3) {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+  }
+
+  .content-pricing>img {
+    width: 250px;
+    height: 250px;
   }
 
   .nav-container {
